# sn-skipera

./: .gitignore  LEARNINGS.md  README.md  knowledge.md  pyproject.toml  status.md
.github/workflows/: publish.yml
src/sn_skipera/: __main__.py
