[project]
name = "sn-skipera"
version = "1.0.0"
description = "CLI tool to auto-complete ServiceNow NowLearning videos"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "selenium>=4.15.0",
]

[project.scripts]
sn-skipera = "sn_skipera.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sn_skipera"]

[tool.uv]
package = true
